<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <data>

    </data>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <LinearLayout
            android:id="@+id/tbHeader"
            android:layout_width="match_parent"
            android:layout_height="@dimen/dp_48"
            android:background="@color/main_bg"
            android:gravity="center_vertical"
            android:orientation="horizontal">

            <LinearLayout
                android:id="@+id/lnHeader"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/dp_16"
                tools:ignore="UselessParent">

                <ImageButton
                    android:id="@+id/ibClose"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:background="@drawable/bg_ripple_animation_button_back"
                    android:src="@drawable/ic_delete_white"
                    android:layout_gravity="center"
                    android:visibility="visible"
                    android:contentDescription="@string/description_place_image" />

                <LinearLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:orientation="vertical"
                    android:layout_marginStart="@dimen/dp_8">

                    <vn.hitu.ntb.widget.AppTextViewBold
                        android:id="@+id/tvTile"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:ellipsize="end"
                        android:maxLines="1"
                        android:text="@string/new_group"
                        android:textSize="@dimen/sp_16"
                        android:textColor="@color/white" />

                    <vn.hitu.ntb.widget.AppTextView
                        android:id="@+id/tvChoose"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        tools:text="@string/new_group"
                        android:textColor="@color/white" />
                </LinearLayout>
            </LinearLayout>


        </LinearLayout>

        <LinearLayout
            android:id="@+id/llGroupChat"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@color/primary_background"
            android:orientation="vertical"

            >

            <LinearLayout
                android:id="@+id/llNameGroup"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center_vertical"
                android:orientation="horizontal"
                android:background="@color/primary_background"
                android:paddingHorizontal="@dimen/dp_16"
                android:paddingVertical="@dimen/dp_8">

                <ImageButton
                    android:id="@+id/ibCamera"
                    android:layout_width="@dimen/dp_48"
                    android:layout_height="@dimen/dp_48"
                    android:background="@drawable/bg_sync"
                    android:src="@drawable/ic_camera_create_chat"
                    tools:ignore="ContentDescription" />

                <vn.hitu.ntb.widget.AppEditTextBold
                    android:id="@+id/edtName"
                    android:layout_width="0dp"
                    android:layout_weight="1"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="@dimen/dp_8"
                    android:hint="@string/hint_create_group"
                    android:background="@color/primary_background"
                    android:maxLength="255"
                    app:textAllCaps="true"
                    android:maxLines="1"
                    android:textSize="@dimen/sp_16" />

                <ImageButton
                    android:id="@+id/ibEmojiSticker"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:padding="@dimen/dp_8"
                    android:background="@drawable/bg_ripple_animation_button_back"
                    android:src="@drawable/ic_emotion_input_selection"
                    android:contentDescription="@string/description_place_image" />

            </LinearLayout>

            <View
                android:layout_width="match_parent"
                android:layout_height="@dimen/dp_0_1"
                android:background="@color/expired" />

            <LinearLayout
                android:id="@+id/llHeaderTops"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical">

                <HorizontalScrollView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:background="@color/bg_header_scrollView"
                    android:scrollbars="none">


                    <LinearLayout
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:background="@color/primary_background"
                        android:orientation="horizontal">

                        <LinearLayout
                            android:layout_width="wrap_content"
                            android:layout_height="45dp"
                            android:orientation="horizontal"
                            android:id="@+id/searchBtn"
                            android:background="@drawable/chat_bg_border_radius_8dp"
                            android:gravity="center"
                            android:layout_marginHorizontal="@dimen/dp_16"
                            android:layout_marginBottom="@dimen/dp_8"
                            android:paddingEnd="@dimen/dp_8"
                            android:layout_margin="@dimen/dp_8"

                            >
                            <ImageView
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:paddingStart="@dimen/dp_8"
                                android:src="@drawable/ic_search_line"
                                android:layout_marginRight="16dp"/>

                            <vn.hitu.ntb.widget.AppEditText
                                android:id="@+id/edtSearch"
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:textSize="14sp"
                                android:background="@color/transparent"
                                android:fontFamily="@font/public_sans_regular"
                                android:textColorHint="@color/secondary_text"
                                android:hint="@string/hint_search_user"
                                />
                        </LinearLayout>


                        <vn.hitu.ntb.widget.AppTextView
                            android:visibility="gone"
                            android:id="@+id/tvSuggest"
                            android:layout_width="wrap_content"
                            android:layout_height="@dimen/dp_32"
                            android:layout_margin="@dimen/dp_8"
                            android:background="@drawable/bg_search"
                            android:drawablePadding="@dimen/dp_4"
                            android:paddingStart="@dimen/dp_8"
                            android:paddingTop="@dimen/dp_8"
                            android:paddingEnd="@dimen/dp_8"
                            android:paddingBottom="@dimen/dp_8"
                            android:text="@string/suggest"
                            android:textColor="@color/main_bg" />

                        <vn.hitu.ntb.widget.AppTextView
                            android:id="@+id/tvLately"
                            android:layout_width="wrap_content"
                            android:layout_height="@dimen/dp_32"
                            android:layout_margin="@dimen/dp_8"
                            android:layout_gravity="center_vertical"
                            android:background="@drawable/custom_button"
                            android:paddingStart="@dimen/dp_8"
                            android:paddingTop="@dimen/dp_8"
                            android:paddingEnd="@dimen/dp_8"
                            android:paddingBottom="@dimen/dp_8"
                            android:text="@string/recently"
                            android:textColor="@color/white" />

                        <vn.hitu.ntb.widget.AppTextView
                            android:id="@+id/tvPhoneBook"
                            android:layout_width="wrap_content"
                            android:layout_height="@dimen/dp_32"
                            android:layout_margin="@dimen/dp_8"
                            android:layout_gravity="center_vertical"
                            android:background="@drawable/custom_button_white"
                            android:drawablePadding="@dimen/dp_4"
                            android:paddingStart="@dimen/dp_8"
                            android:paddingTop="@dimen/dp_8"
                            android:paddingEnd="@dimen/dp_8"
                            android:paddingBottom="@dimen/dp_8"
                            android:text="@string/phonebook"
                            android:textColor="@color/main_bg" />

                    </LinearLayout>
                </HorizontalScrollView>

                <View
                    android:layout_width="match_parent"
                    android:layout_height="@dimen/dp_1"
                    android:background="@color/gray_300" />
            </LinearLayout>


        </LinearLayout>

        <View
            android:layout_width="match_parent"
            android:layout_height="@dimen/dp_1"
            android:background="@color/nav_background" />


    </LinearLayout>
</layout>